initial - coming soon card

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: center;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.child {
+  padding: 15px;
+  display: inline-block;
+  border: 2px solid #E6D361;
+  margin: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  padding-bottom: 1rem;
+  text-align: left;
+}
+
+.logo-container {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+}
+.logo {
+  height: 100%;
+}
+
+.image {
+  padding: 20px;
+}
+
+.text-container {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  height: 100%;
+  
+}
+
+.text {
+  /* padding: 10px; */
+  display: inline-block;
+  text-align: left;
+}
+
+.links {
+  text-align: center;
+  padding-top: 15px;
+  height: 3em;
+  display: inline-block;
+}
+.links a {
+  padding: 5px;
+  display: inline;
+}
+
+.links img{
+  display: inline;
+  width: 30px;
 }
