add space-between to parent

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   display: inline-block;
   border: 2px solid #E6D361;
   margin: 25px;
-  overflow: auto;
+  justify-content: space-between
 }
 
 .title {
