--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,12 @@
   justify-content: space-between
 }
 
+@media (max-width: 768px) {
+  .space {
+    justify-content: space-between
+  }
+}
+
 .title {
   padding-bottom: 1rem;
   text-align: left;
