simplify stacking of elements

--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,12 @@
   display: inline-block;
   border: 2px solid #E6D361;
   margin: 25px;
-  justify-content: space-between
+  justify-content: space-between;
 }
 
 @media (max-width: 768px) {
   .space {
-    justify-content: space-between
+    justify-content: space-between;
   }
 }
 
@@ -30,8 +30,11 @@
   justify-content: center;
   align-content: center;
 }
-.logo {
-  height: 100%;
+
+@media (max-width: 768px) {
+  .logo-container {
+    margin-bottom: 10px;
+  }
 }
 
 .image {
@@ -60,7 +63,7 @@
 .links {
   text-align: center;
   padding-top: 15px;
-  height: 3em;
+  /* height: 3em; */
   display: inline-block;
 }
 .links a {
